# poly_analysis

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  analytics.py  api.py  collector.py  config.py  db.py  models.py  polymarket.py  realtime.py
docs/superpowers/plans/: 2026-04-06-polymarket-btc-5m-monitor.md
docs/superpowers/specs/: 2026-04-06-dashboard-event-folding-and-stats-grouping-design.md
static/: app.js  index.html  styles.css
tests/: test_analytics.py  test_api.py  test_collector.py  test_polymarket.py  test_realtime.py
