[project]
name = "poly-analysis"
version = "0.1.0"
description = "Polymarket BTC 5-minute monitor with SQLite storage and read-only dashboard"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.34,<1.0",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
